fixed quote padding on mobile

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -139,7 +139,6 @@ body {
 .image-gallery-image img {
   width: auto;
   height: 500px;
-  margin-left: 14%;
 }
 
 .form-group {
